# geoboard

./: .env.template  .gitignore  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 26cefa44462c_dashboard.py  366e560ea3ed_user_name.py  56436d4ffb2b_widget.py  69c8f53d7605_dashboard.py  ce4073e334a7_widget.py
backend/common/async_utils/: __init__.py  async_to_sync.py
backend/common/schema/: partial.py
backend/src/: api.py  cli.py  config.py  main.py
backend/src/auth/: permission.py  views.py
backend/src/dashboard/: constants.py  dependencies.py  exceptions.py  models.py  schemas.py  services.py  types.py  views.py
backend/src/dashboard/weather_api/: __init__.py  parsers.py  types.py  utils.py
backend/src/dashboard/weather_api/client/: api.py  client.py  types.py
backend/src/dashboard/weather_api/parsers/: __init__.py  forecast.py  location.py  utils.py  widget.py
backend/src/database/: core.py
backend/src/permissions/: dependencies.py
backend/src/users/: cli.py  models.py  schemas.py  services.py  views.py
